--- a/TeduShop.Web/Shop.Web.csproj
+++ b/TeduShop.Web/Shop.Web.csproj
@@ -230,21 +230,21 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TeduShop.Common\TeduShop.Common.csproj">
+    <ProjectReference Include="..\TeduShop.Common\Shop.Common.csproj">
       <Project>{97292b8e-3ede-48ed-909a-e4c5f2e14709}</Project>
-      <Name>TeduShop.Common</Name>
+      <Name>Shop.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TeduShop.Data\TeduShop.Data.csproj">
+    <ProjectReference Include="..\TeduShop.Data\Shop.Data.csproj">
       <Project>{807f1411-14de-42f7-8ceb-8b829519b3d5}</Project>
-      <Name>TeduShop.Data</Name>
+      <Name>Shop.Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TeduShop.Model\TeduShop.Model.csproj">
+    <ProjectReference Include="..\TeduShop.Model\Shop.Model.csproj">
       <Project>{59705ec2-2a39-4679-9774-e15f4d6572a0}</Project>
-      <Name>TeduShop.Model</Name>
+      <Name>Shop.Model</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TeduShop.Service\TeduShop.Service.csproj">
+    <ProjectReference Include="..\TeduShop.Service\Shop.Service.csproj">
       <Project>{ba7a2bc8-522c-401f-8b92-c0df7545e4af}</Project>
-      <Name>TeduShop.Service</Name>
+      <Name>Shop.Service</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
