--- a/TeduShop.Data/Shop.Data.csproj
+++ b/TeduShop.Data/Shop.Data.csproj
@@ -51,17 +51,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\Disposeable.cs" />
+    <Compile Include="Infrastructure\IDbFactory.cs" />
+    <Compile Include="Infrastructure\IRepository.cs" />
+    <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShopDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TeduShop.Common\TeduShop.Common.csproj">
+    <ProjectReference Include="..\TeduShop.Common\Shop.Common.csproj">
       <Project>{97292b8e-3ede-48ed-909a-e4c5f2e14709}</Project>
-      <Name>TeduShop.Common</Name>
+      <Name>Shop.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TeduShop.Model\Shop.Model.csproj">
+      <Project>{59705ec2-2a39-4679-9774-e15f4d6572a0}</Project>
+      <Name>Shop.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repositories\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
